src/app/billing/stepper/stepper.component.scss
.billingModelContainer {
  width: 100%;
  margin-bottom: 20px;
  .bm-header {
    background-color: #fcfdff;
    height: 50px;
    margin-bottom: 2px;
    padding: 14px 30px;
    font-size: 18px;
    font-family: "notoSansRegular";
    .text-right {
      text-align: right;
    }
  }
  .bm-main {
    background-color: #ffffff;
    padding: 50px 30px;
    min-height: 120px;
    .billingBoxCont {
      .billingBox {
        border-radius: 6px 6px 6px 6px;
        background-color: #f4f6fb;
        height: 200px;
        .boxHead {
          padding: 6px 15px;
          img {
            float: right;
          }
          p {
            font-size: 15px;
            font-family: "Lato";
            line-height: 18px;
            font-style: "bold";
            color: #000000;
            margin-top: 5px;
            float: left;
          }
          input[type="radio"] {
            background-color: #f4f6fb !important;
            margin: 14px 20px;
            border: 2px solid white;
          }
        }
        .boxCont {
          padding: 10px 15px;
          background-color: #f4f6fb;
          p {
            font-family: "notoSansRegular";
            font-size: 16px;
            line-height: 21px;
            font-style: normal;
            color: #556486;
          }
          .fontstyle {
            font-style: italic !important;
          }
        }
      }
      width: 100%;
      padding: 25px 10px;
    }
  }

  .bs-footer {
    background-color: #ffffff;
    padding: 50px 30px;
    button {
      display: block;
      background-color: #1c67f5;
      color: #ffffff;
      width: 180px;
      height: 38px;
      border-radius: 3px;
      margin-bottom: 30px;
      border: none;
      box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
      float: right;
    }
  }
}

.flex-center-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

div.is-invalid {
  border-color: #eb3232 !important;
  box-shadow: none;
}

.billingBoxCont {
  .billingBox.active {
    border-color: #eebe47;
    .boxHead {
      color: #eebe47;
    }
  }
  .billingBox {
    // border: 1px solid #1c67f5;
    border-radius: 6px 6px 0px 0px;
    .boxHead {
      padding: 12px 15px;
      color: #003aa7;
      font-size: 12px;
      .ImgCont {
        width: 100px;
        position: relative;
        top: -2px;
        margin-right: 15px;
        display: inline-block;
      }
    }
    .boxCont {
      // height: 350px;
      overflow-y: auto;
      padding: 10px 15px;
      background-color: #fcfdff;
      .pad-l-20 {
        padding-left: 29px;
        p {
          font-size: 22px;
          span {
            font-size: 20px;
          }
          border-bottom: 1px solid #9b9b9b;
          padding-bottom: 8px;
          margin-bottom: 4px;
        }
      }
      .large {
        margin: 15px 0px;
        font-size: 30px;
        font-weight: 600;
        height: 60px;
      }
      .footerText {
        color: #828282;
        padding-left: 29px;
        p {
          margin: 0px;
          font-size: 18px;
        }
      }
      .ImgCont {
        width: 10px;
        position: relative;
        top: -2px;
        margin-right: 15px;
        display: inline-block;
      }
    }
  }
  width: 100%;
}

.wizard {
  margin: 20px auto;
  background: #fff;
}

.wizard .nav-tabs {
  position: relative;
  margin: 40px auto;
  margin-bottom: 0;
  // border-bottom-color: #e0e0e0;
}

.nav-tabs {
  border-bottom: none !important;
}

.wizard > div.wizard-inner {
  position: relative;
}

.connecting-line {
  height: 2px;
  background: #e0e0e0;
  position: absolute;
  width: 70%;
  margin-left: 30px;
  // margin: 0 auto;
  left: 0;
  right: 0;
  top: 55%;
  z-index: 1;
}

.lineHiglight1 {
  height: 2px;
  background: #1c67f5;
  position: absolute;
  width: 23.3%;
  margin-left: 30px;
  left: 0;
  right: 0;
  top: 55%;
  z-index: 1;
}
.lineHiglight2 {
  height: 2px;
  background: #1c67f5;
  position: absolute;
  width: 46.6%;
  margin-left: 30px;
  left: 0;
  right: 0;
  top: 55%;
  z-index: 1;
}
.lineHiglight3 {
  height: 2px;
  background: #1c67f5;
  position: absolute;
  width: 70%;
  margin-left: 30px;
  left: 0;
  right: 0;
  top: 55%;
  z-index: 1;
}
.wizard .nav-tabs > li.active > a,
.wizard .nav-tabs > li.active > a:hover,
.wizard .nav-tabs > li.active > a:focus {
  color: #555555;
  cursor: default;
  border: 0;
  border-bottom-color: transparent;
}

span.round-tab {
  width: 30px;
  height: 30px;
  line-height: 24px;
  display: inline-block;
  border-radius: 100px;
  background: #fff;
  border: 2px solid #9b9b9b;
  z-index: 2;
  left: 0;
  text-align: center;
  font-size: 15px;
  color: #1c67f5;
}
span.round-tab i {
  color: #1c67f5;
}
.wizard li.active span.round-tab {
  background: #1c67f5;
  border: 2px solid #e0eaff;
  color: #fff;
}
.wizard li.active span.round-tab i {
  color: #5bc0de;
}

span.round-tab:hover {
  color: #333;
  border: 2px solid #333;
}

.wizard .nav-tabs > li {
  width: 25%;
}

.wizard li:after {
  content: " ";
  position: absolute;
  left: 46%;
  opacity: 0;
  margin: 0 auto;
  bottom: 0px;
  border: 5px solid transparent;
  border-bottom-color: #5bc0de;
  transition: 0.1s ease-in-out;
}

// .wizard li.active:after {
//   content: " ";
//   position: absolute;
//   left: 46%;
//   opacity: 1;
//   margin: 0 auto;
//   bottom: 0px;
//   border: 10px solid transparent;
//   border-bottom-color: #5bc0de;
// }

.wizard .nav-tabs > li a {
  width: 70px;
  height: 70px;
  margin: 20px auto;
  border-radius: 100%;
  padding: 0;
}

.wizard .nav-tabs > li a:hover {
  background: transparent;
}

.wizard .tab-pane {
  position: relative;
  padding-top: 50px;
}

.wizard h3 {
  margin-top: 0;
}

.close-btn {
  margin-left: 30px;
  cursor: pointer;
  img {
    width: 13px;
    height: 13px;
  }
}
@media (max-width: 585px) {
  .wizard {
    width: 90%;
    height: auto !important;
  }

  span.round-tab {
    font-size: 16px;
    width: 50px;
    height: 50px;
    line-height: 50px;
  }

  .wizard .nav-tabs > li a {
    width: 50px;
    height: 50px;
    line-height: 50px;
  }

  .wizard li.active:after {
    content: " ";
    position: absolute;
    left: 35%;
  }
}
.row {
  margin-right: 0px !important;
  margin-left: 0px !important;
}

.whole-wizard {
  width: 100%;
}

.nav {
  list-style-type: none;
  text-align: center;
  margin-top: -20px;
  padding: 0;
}

.nav li {
  display: inline-block;
  font-size: 20px;
  padding: 20px;
  padding-right: 80px;
  font-size: 15px;
  z-index: 999;
}

span.Round-tab {
  width: 30px;
  height: 30px;
  line-height: 24px;
  display: inline-block;
  border-radius: 100px;
  background: #fff;
  border: 2px solid #9b9b9b;
  z-index: 2;
  left: 0;
  text-align: center;
  font-size: 15px;
  color: #1c67f5;
}

.whoe-wizard li.active span.Round-tab {
  background: #1c67f5;
  border: 2px solid #e0eaff;
  color: #fff;
}
.whoe-wizard li.active span.Round-tab i {
  color: #5bc0de;
}

/*** Firefox CSS ***/

@-moz-document url-prefix() {
  .connecting-line {
    top: 30% !important;
  }
  .lineHiglight1 {
    top: 30% !important;
  }
  .lineHiglight2 {
    top: 30% !important;
  }
  .lineHiglight3 {
    top: 30% !important;
  }
}

/*** Firefox CSS ***/

/*** Responsive CSS ***/

@media (min-width: 1920px) {
  .connecting-line {
    width: 58% !important;
  }
  .lineHiglight1 {
    width: 22.3% !important;
  }
  .lineHiglight2 {
    width: 40% !important;
  }
  .lineHiglight3 {
    width: 58% !important;
  }
}

@media (min-width: 1025px) and (max-width: 1280px) {
}

/*** Responsive CSS ***/

